# rpc

./: CMakeLists.txt  README.md
example/: friend.pb.cc  friend.pb.h  friend.proto  user.pb.cc  user.pb.h  user.proto
example/callee/: CMakeLists.txt  userService.cc
example/caller/: CMakeLists.txt  callUserService.cc
src/: CMakeLists.txt  logger.cc  mprpcApplication.cc  mprpcChannel.cc  mprpcConfig.cc  mprpcController.cc  rpcHeader.pb.cc  rpcHeader.proto  rpcProvider.cc
src/include/: lockQueue.h  logger.h  mprpcApplication.h  mprpcChannel.h  mprpcConfig.h  mprpcController.h  rpcHeader.pb.h  rpcProvider.h
